[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/art/enemy/parasite.png" type="Texture" id=1]
[ext_resource path="res://scripts/Parasite.gd" type="Script" id=2]
[ext_resource path="res://scripts/SoftCollision.gd" type="Script" id=3]
[ext_resource path="res://scenes/parasite/legs/LegParticleRight.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/parasite/legs/LegParticleLeft.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/parasite/legs/LegParticleUp.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/parasite/legs/LegParticleDown.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/art/game elements/FilledCircle.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 88.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.8938

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="CircleShape2D" id=5]
radius = 344.093

[sub_resource type="Animation" id=6]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 10.11
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 80.57
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
angular_velocity = 34.15
angular_velocity_random = 0.64
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0
scale_random = 0.5
scale_curve = SubResource( 8 )

[node name="Parasite" type="KinematicBody2D"]
position = Vector2( 208, 120 )
collision_layer = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7
frame = 6

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 2 )

[node name="SoftCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
shape = SubResource( 3 )

[node name="DamageCollision" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageCollision"]
shape = SubResource( 4 )

[node name="AudioDetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AudioDetectionArea"]
shape = SubResource( 5 )

[node name="Legs" type="Node2D" parent="."]

[node name="LegParticleRight" parent="Legs" instance=ExtResource( 4 )]
position = Vector2( 8, 0 )

[node name="LegParticleUp" parent="Legs" instance=ExtResource( 6 )]
position = Vector2( 0, -8 )

[node name="LegParticleUp2" parent="Legs" instance=ExtResource( 6 )]
position = Vector2( 6, -5 )
rotation = 0.677462

[node name="LegParticleUp3" parent="Legs" instance=ExtResource( 6 )]
position = Vector2( -6, -5 )
rotation = -0.846454

[node name="LegParticleLeft" parent="Legs" instance=ExtResource( 5 )]
position = Vector2( -8, 0 )

[node name="LegParticleDown" parent="Legs" instance=ExtResource( 7 )]
position = Vector2( 0, 8 )

[node name="LegParticleDown2" parent="Legs" instance=ExtResource( 7 )]
position = Vector2( 5, 5 )
rotation = -0.853201

[node name="LegParticleDown3" parent="Legs" instance=ExtResource( 7 )]
position = Vector2( -5, 5 )
rotation = 0.850767

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 6 )

[node name="DeathParticles" type="Particles2D" parent="."]
emitting = false
amount = 30
one_shot = true
explosiveness = 0.71
process_material = SubResource( 9 )
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BlinkTimer" type="Timer" parent="."]

[node name="SquelchTimer" type="Timer" parent="."]

[node name="SpawnTween" type="Tween" parent="."]

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_entered" from="DamageCollision" to="." method="_on_DamageCollision_body_entered"]
[connection signal="body_exited" from="DamageCollision" to="." method="_on_DamageCollision_body_exited"]
[connection signal="body_entered" from="AudioDetectionArea" to="." method="_on_AudioDetectionArea_body_entered"]
[connection signal="body_exited" from="AudioDetectionArea" to="." method="_on_AudioDetectionArea_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="SquelchTimer" to="." method="_on_SquelchTimer_timeout"]
